Fix the Reactor Placement Overlay not being positioned correctly